--- a/To-Do-React-Frontend/package.json
+++ b/To-Do-React-Frontend/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "react": "^17.0.0 || ^18.0.0",
+    "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.13.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^6.9.0",
