--- a/To-Do-React-Frontend/package.json
+++ b/To-Do-React-Frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.13.0",
+    "react-comments-section": "^3.0.1",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^17.0.0 || ^18.0.0",
