--- a/To-Do-React-Frontend/package.json
+++ b/To-Do-React-Frontend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "lucide-react": "^0.424.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.13.0",
