--- a/To-Do-React-Frontend/package.json
+++ b/To-Do-React-Frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
@@ -24,6 +25,7 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.13.0",
+    "react-chartjs-2": "^5.2.0",
     "react-comments-section": "^3.0.1",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^6.9.0",
